switch to Java12 and clean up imports.